; ModuleID = '/home/carl/AnghaBench/freebsd/stand/fdt/extr_fdt_loader_cmd.c_fdt_data_fmt.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/fdt/extr_fdt_loader_cmd.c_fdt_data_fmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8**)* @fdt_data_fmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fdt_data_fmt(i8* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i8**, i8*** %7, align 8
  store i8* null, i8** %12, align 8
  store i32 1, i32* %4, align 4
  br label %38

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @fdt_isprint(i8* %14, i32 %15, i32* %8)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %13
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i8**, i8*** %7, align 8
  %23 = call i32 @fdt_data_str(i8* %19, i32 %20, i32 %21, i8** %22)
  store i32 %23, i32* %4, align 4
  br label %38

24:                                               ; preds = %13
  %25 = load i32, i32* %6, align 4
  %26 = srem i32 %25, 4
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %24
  %29 = load i8*, i8** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = load i8**, i8*** %7, align 8
  %32 = call i32 @fdt_data_cell(i8* %29, i32 %30, i8** %31)
  store i32 %32, i32* %4, align 4
  br label %38

33:                                               ; preds = %24
  %34 = load i8*, i8** %5, align 8
  %35 = load i32, i32* %6, align 4
  %36 = load i8**, i8*** %7, align 8
  %37 = call i32 @fdt_data_bytes(i8* %34, i32 %35, i8** %36)
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %33, %28, %18, %11
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i64 @fdt_isprint(i8*, i32, i32*) #1

declare dso_local i32 @fdt_data_str(i8*, i32, i32, i8**) #1

declare dso_local i32 @fdt_data_cell(i8*, i32, i8**) #1

declare dso_local i32 @fdt_data_bytes(i8*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
